--- a/assignment_2/index.html
+++ b/assignment_2/index.html
@@ -96,43 +96,44 @@
     </section>
     <section>
         <div class="container">
-            <div class="row gy-3">
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="card">
-                        <img src="/images/post1.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Business strategy</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the card's content.</p>
-                            <a href="#" class="education">Learn More</a>
+            <div class="busines_strategy">
+                <!-- <div class="row gy-3">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Business strategy</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                    of
+                                    the card's content.</p>
+                                <a href="#" class="education">Learn More</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="card">
-                        <img src="/images/post-3.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Digitalization</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the card's content.</p>
-                            <a href="#" class="education">Learn More</a>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card">
+                            <img src="/images/post-3.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Digitalization</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                    of
+                                    the card's content.</p>
+                                <a href="#" class="education">Learn More</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="card">
-                        <img src="/images/post-2.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Risk assessment</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the card's content.</p>
-                            <a href="#" class="education">Learn More</a>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="card"> -->
+                            <!-- <img src="/images/post-2.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Risk assessment</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                    of
+                                    the card's content.</p>
+                                <a href="#" class="education">Learn More</a>
+                            </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -294,7 +295,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-12 col-md-6">
+                                <div class="col-12 col-md-6sssssss">
                                     <div class="home-stats_content-right">
                                         <img src="/images/team.png" alt="">
                                     </div>
