--- a/assignment_2/index.html
+++ b/assignment_2/index.html
@@ -97,43 +97,7 @@
     <section>
         <div class="container">
             <div class="busines_strategy">
-                <!-- <div class="row gy-3">
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">Business strategy</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                    of
-                                    the card's content.</p>
-                                <a href="#" class="education">Learn More</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <div class="card">
-                            <img src="/images/post-3.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Digitalization</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                    of
-                                    the card's content.</p>
-                                <a href="#" class="education">Learn More</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <div class="card"> -->
-                            <!-- <img src="/images/post-2.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Risk assessment</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                    of
-                                    the card's content.</p>
-                                <a href="#" class="education">Learn More</a>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
+                
             </div>
         </div>
     </section>
@@ -295,7 +259,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-12 col-md-6sssssss">
+                                <div class="col-12 col-md-6">
                                     <div class="home-stats_content-right">
                                         <img src="/images/team.png" alt="">
                                     </div>
@@ -349,13 +313,10 @@
                 </div>
                 <div class="col-12 col-md-6">
                     <div class="home-studio-right">
-                        <a href="#" class="home-studio-video">
+                        <p href="#" class="home-studio-video">
                             <img src="/images/video-image.png" alt="">
-                            <div class="studio-play-wrapper">
-                                <img src="/images/play_icon.png" alt="">
-                                <div class="studio-play-text">Play Video</div>
-                            </div>
-                        </a>
+                            <div class="modal12"></div>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -367,7 +328,7 @@
                 <div class="section-title">
                     <h3>Latest Blog & News</h3>
                 </div>
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col-12 col-md-6 col-lg-4">
                             <div class="card my-5">
                                 <img src="/images/meeting.jpeg" class="card-img-top" alt="...">
@@ -401,7 +362,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -452,7 +413,6 @@
                 <div class="footer-policy my-5">
                     <p>© All rights reserved – Finsweet</p>
                     <p>Privacy Policy Terms & Conditions</p>
-
                 </div>
             </div>
         </div>
