--- a/assignment_2/index.html
+++ b/assignment_2/index.html
@@ -325,9 +325,9 @@
     <section class="section-blog">
         <div class="container">
             <div class="blog-special">
-                <div class="section-title">
+                <!-- <div class="section-title">
                     <h3>Latest Blog & News</h3>
-                </div>
+                </div> -->
                 <!-- <div class="row">
                     <div class="col-12 col-md-6 col-lg-4">
                             <div class="card my-5">
